# marketing-brain-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
data/: brand_guidelines.md
data/templates/: blog.md  email.md  social.md
