[project]
name = "marketing-brain-mcp"
version = "0.1.0"
description = "Jimdo Content Engine MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
marketing-brain = "server:mcp.run"
